  24-Jul-2021    V0.63 Make SiftsSummaryProvider() a subclass of StashableBase()
  14-Mar-2022    V0.64 Adjust parsing logic of ParentChildTreeFile.txt in InterProProvider.__getInterProParents()
  16-May-2022    V0.65 Update GlyGenProvider resource URL location
  25-Jul-2022    V0.66 Adjust UniProtUtils to temporarily use the legacy baseUrl (legacy.uniprot.org) for API calls
   4-Oct-2022    V0.67 Update UniProtUtils code to use new UniProt API
  10-Oct-2022    V0.68 Update URLs to InterPro data, and add better error catching for InterPro provider tests
  11-Oct-2022    V0.69 Only use secondary service site (EBI) for bulk UniProt XML requests
  26-Nov-2022    V0.70 Fix UniProtUtils primary API fetching method
  28-Nov-2022    V0.71 Add functionality to search primary service using secondary accession IDs (in case of obsoleted IDs)
   9-Jan-2023    V0.72 Configuration changes to support tox 4
   6-Feb-2023    V0.73 Resolve pylint issues
  23-Feb-2023    V0.74 Fix UniProtUtils primary fetching service to handle cases with invalid UniProt IDs
   9-Mar-2023    V0.75 Lower default maxChunkSize to 10 for UniProt requests (UniProt API having trouble streaming XML responses)
  19-Sep-2023    V0.76 Use HTTP instead of FTP for InterPro and Pfam downloads;
                       RO-4033: Adjust logic used for processing and assigning sequence alignment details
   3-Oct-2023    V0.77 Update PfamProvider to use new Pfam mapping file
  14-Nov-2023    V0.78 Add SPARQL functionality and version information to GlyGenProvider
  18-Mar-2024    V0.79 Add yeast and fruitfly datasets to GlyGenProvider
  21-May-2024    V0.80 Fix pylinting
   3-Jun-2024    V0.81 Update PfamProvider to use new Pfam mapping file
  20-Aug-2024    V0.82 Disable default backup to fallback setting in UniProtIdMappingProvider;
                       Update GlyGenProvider
   9-Dec-2024    V0.83 Update Azure pipelines to use latest macOS, Ubuntu, and python 3.10